SYSTEM add execute quinimobile jboss local-tsys